@@ -106,8 +106,7 @@ public class StudentProgressDataService {
             try {
               UUID subjectId = UUID.fromString(subject.getSubjectId());
               itemsBySubjectId.computeIfAbsent(subjectId, k -> new ArrayList<>()).add(subject);
-            } catch (IllegalArgumentException ex) {
-              continue;
+            } catch (IllegalArgumentException ignored) {
             }
           }
         }
@@ -123,31 +122,34 @@ public class StudentProgressDataService {
 
         if (anyPassed) {
           completedSubjectIds.add(subjectId);
-          // Include ALL attempts for completed subjects to preserve full history
-          for (StudentLearningProgressResponse.StudentProgressSubjectItem attempt : attempts) {
-            // Skip attempts missing semester metadata (needed for timeline grouping)
-            if (attempt.getSemesterId() == null || attempt.getAcademicYearId() == null) continue;
-            completedSubjects.add(CompletedSubjectDetail.builder()
-                .subjectId(subjectId)
-                .semesterId(parseUuid(attempt.getSemesterId()))
-                .academicYearId(parseUuid(attempt.getAcademicYearId()))
-                .semesterOrder(attempt.getSemesterOrder())
-                .academicYearOrder(attempt.getAcademicYearOrder())
-                .subjectCode(attempt.getSubjectCode())
-                .subjectName(attempt.getSubjectName())
-                .credits(attempt.getCredits())
-                .studyOrder(attempt.getOrder() != null ? attempt.getOrder() : Integer.MAX_VALUE)
-                .grade10(attempt.getGrade10())
-                .letterGrade(attempt.getLetterGrade())
-                .grade4(attempt.getGrade4())
-                .attemptNo(attempt.getAttemptNo())
-                .isHighestResult(attempt.getIsHighestResult())
-                .isPassed(attempt.getIsPassed())
-                .build());
-          }
-        } else {
+        }
+
+        // Include ALL attempts (passed and failed) to preserve full history
+        for (StudentLearningProgressResponse.StudentProgressSubjectItem attempt : attempts) {
+          // Skip attempts missing semester metadata (needed for timeline grouping)
+          if (attempt.getSemesterId() == null || attempt.getAcademicYearId() == null) continue;
+          completedSubjects.add(CompletedSubjectDetail.builder()
+              .subjectId(subjectId)
+              .semesterId(parseUuid(attempt.getSemesterId()))
+              .academicYearId(parseUuid(attempt.getAcademicYearId()))
+              .semesterOrder(attempt.getSemesterOrder())
+              .academicYearOrder(attempt.getAcademicYearOrder())
+              .subjectCode(attempt.getSubjectCode())
+              .subjectName(attempt.getSubjectName())
+              .credits(attempt.getCredits())
+              .studyOrder(attempt.getOrder() != null ? attempt.getOrder() : Integer.MAX_VALUE)
+              .grade10(attempt.getGrade10())
+              .letterGrade(attempt.getLetterGrade())
+              .grade4(attempt.getGrade4())
+              .attemptNo(attempt.getAttemptNo())
+              .isHighestResult(attempt.getIsHighestResult())
+              .isPassed(attempt.getIsPassed())
+              .build());
+        }
+
+        if (!anyPassed) {
           remainingSubjectIds.add(subjectId);
-          Integer subjectCredits = attempts.get(0).getCredits();
+          Integer subjectCredits = attempts.getFirst().getCredits();
           if (subjectCredits == null) {
             throw new StudentDataUnavailableException("credits",
                 "Cannot validate learning goal: credits is missing for subject " + subjectId);
@@ -187,7 +189,12 @@ public class StudentProgressDataService {
   }
 
   /**
-   * Data class to hold student progress information including completion details
+   * Data class holding extracted student progress information.
+   * <p>
+   * Naming note:
+   * - completedSubjectIds = subjects with at least one passed attempt (fulfilled)
+   * - remainingSubjectIds = subjects with no passed attempt yet (failed or never attempted)
+   * - completedSubjects     = ALL individual attempts (passed + failed) with full grade/attempt metadata
    */
   public record StudentProgressData(
       BigDecimal currentGpa4,
@@ -201,11 +208,13 @@ public class StudentProgressDataService {
   ) {}
 
   /**
-   * Metadata for completed subjects including study order and grades.
-   * Uses pass determination formula from StudentProgressServiceImpl.isStudentPassedSubject():
-   * - GRADED: grade >= 4.0
-   * - PASS_FAIL: use isPassed flag
-   * - BOTH: isPassed=true OR grade >= 5.0
+   * A single attempt at a subject — passed or failed.
+   * Stored for every attempt in the student's history to preserve full grade/attempt data
+   * for the learning path timeline.
+   * <p>
+   * Pass/fail status is determined upstream by the course-management progress API.
+   * Consistent with SubjectPassUtil: GRADED → grade >= 4.0, PASS_FAIL → isPassed flag,
+   * BOTH → isPassed=true or grade >= 4.0.
    */
   @Builder
   public record CompletedSubjectDetail(
